Esercizio 71 - Prima parte