@@ -1,8 +1,10 @@
 package it.unibo.inner;
 
 import it.unibo.inner.api.IterableWithPolicy;
+import it.unibo.inner.test.impl.IterableWithPolicyImpl;
 
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 import static it.unibo.inner.test.Assertions.assertContentEqualsInOrder;
 
@@ -11,23 +13,23 @@ public class TestIterablePlain {
     private TestIterablePlain() {}
 
     private static <T> IterableWithPolicy<T> getIterableWithPolicy(T[] elements) {
-        return null; // TODO: return the implementation of IterableWithPolicy
+        return new IterableWithPolicyImpl<>(elements); // TODO: return the implementation of IterableWithPolicy
     }
 
-    public static void main(final String[] args) {
-        String[] test1 = { "pippo", "pluto", "paperino" };
+    public static void main(String[] args) {
+        Integer[] test1 = { 1, 2, 3, 4, 5, 6, 7, 8, 9 };
 
-        IterableWithPolicy<String> evenIterable = getIterableWithPolicy(test1);
-        assertContentEqualsInOrder(evenIterable, List.of("pippo", "pluto", "paperino"));
+        IterableWithPolicy<Integer> evenIterable = getIterableWithPolicy(test1);
+        assertContentEqualsInOrder(evenIterable, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
 
-        String[] test2 = {};
+        Integer[] test2 = {};
 
-        IterableWithPolicy<String> emptyIterable = getIterableWithPolicy(test2);
-        assertContentEqualsInOrder(emptyIterable, List.of());
+        IterableWithPolicy<Integer> emptyIterable = getIterableWithPolicy(test2);
+        assertContentEqualsInOrder(emptyIterable, new ArrayList<>());
 
-        String[] test3 = { "foo" };
+        Integer[] test3 = { 100 };
 
-        IterableWithPolicy<String> oneIterable = getIterableWithPolicy(test3);
-        assertContentEqualsInOrder(oneIterable, List.of("foo"));
+        IterableWithPolicy<Integer> oneIterable = getIterableWithPolicy(test3);
+        assertContentEqualsInOrder(oneIterable, Arrays.asList(100));
     }
 }
